SONAR-15904 - Adapt Issue Search to work with new code reference